--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,6 @@ server:
 
 info:
   app:
-    version: CI_PIPELINE_ID
+    version: CI_PIPELINE_IID
     commit: CI_COMMIT_SHORT_SHA
     branch: CI_COMMIT_BRANCH
