--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
   - build
+  - test
 build:
   stage: build
   image: openjdk:12-alpine
@@ -8,3 +9,10 @@ build:
   artifacts:
     paths:
       - ./build/libs/
+smoke test:
+  stage: test
+  image: openjdk:12-alpine
+  script:
+    - java -jar ./build/libs/car-api.jar &
+    - sleep 30
+    - 
